# hiem

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
src/hiem/: __init__.py  agent.py  cli.py  config.py  fileops.py  llm.py  phases.py  redact.py  runner.py
src/hiem/commands/: __init__.py  branch.py  ci.py  issue.py  label.py  pr.py  release.py  run_cmd.py
tests/: test_cli.py  test_phases.py  test_redact.py  test_runner.py
