[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hiem"
version = "0.1.0"
description = "High-fidelity Engineering that Moves — a local GitHub CLI engineering agent"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Kiliaan Vanvoorden", email = "kiliaan@kilocode.ai" },
]
keywords = ["github", "cli", "engineering", "automation", "ci"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Utilities",
]
dependencies = ["typer>=0.12"]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-mock",
    "ruff",
]

[project.scripts]
hiem = "hiem.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "S"]
ignore = ["S101", "S603", "S607"]
